--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-    <p>🎉🎉🎉Release rapidocr_onnxruntime ➡️ <a href="https://github.com/RapidAI/RapidOCR/releases/tag/v1.3.22">v1.3.22</a></p>
+    <p>📣 新增API文档 ➡️ <a href="https://rapidai.github.io/RapidOCRDocs/install_usage/api/RapidOCR/">API</a></p>
 {% endblock %}
