chore(announce): Add numpy version tips

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-    <p>📣 新增API文档 ➡️ <a href="https://rapidai.github.io/RapidOCRDocs/install_usage/api/RapidOCR/">API</a></p>
+    <p>由于numpy包升级到2.0.0，大家如果在安装`rapidocr_onnxruntime`时，遇到相关问题，建议将numpy版本降到1.x</p>
 {% endblock %}
