docs(announce): Optim annouce

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-    <p>由于numpy包升级到2.0.0，大家如果在安装rapidocr_onnxruntime时，遇到相关问题，建议将numpy版本降到1.x</p>
+    <p>⚠️注意：由于numpy包发布了2.0.0，pip安装rapidocr_onnxruntime时会默认安装2.0.0 numpy，如果后面使用中遇到相关问题，建议手动将numpy版本降到1.x</p>
 {% endblock %}
