--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-    <p>⚠️注意：由于numpy包发布了2.0.0，pip安装rapidocr_onnxruntime时会默认安装2.0.0 numpy，如果后面使用中遇到相关问题，建议手动将numpy版本降到1.x</p>
+    <p>🎉 <a href="https://github.com/RapidAI/RapidOCR/releases/tag/v1.3.23" target="_blank">[Release]</a>rapidocr_onnxruntime>=1.3.23发布了，该版本已经限制numpy版本小于2.0.0，可直接安装使用。</p>
 {% endblock %}
