--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block announce %}
+<!-- {% block announce %}
     <p>main分支文档对应rapidocr v2.0.0版本，该文档正在编写中。v1.x文档参见<a href="https://rapidai.github.io/RapidOCRDocs/v1.4.4/" target="_blank">v1.4.4</a></p>
-{% endblock %}
+{% endblock %} -->
 
 {% block outdated %}
 You're not viewing the latest version.
