--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,27 +12,22 @@ You're not viewing the latest version.
 {% endblock %}
 
 {% block content %}
-<!-- 先渲染原始内容 -->
-{{ super() }}
+{# --- 过期检测逻辑 --- #}
+{% if page and page.meta.revision_date %}
+{% set now = (none).timestamp() | int %}
+{% set last_modified = page.meta.revision_date.timestamp() | int %}
+{% set days_since_update = ((now - last_modified) / 86400) | int %}
 
-<!-- 添加过时警告逻辑 -->
-{% if page and page.meta.date %}
-{% set doc_date = page.meta.date %}
-{% set today = "" | as_datetime("%Y-%m-%d") %}
-{% set diff_days = (today | date("%s") - doc_date | date("%s")) // 86400 %}
+{% set stale_after_days = 365 %} {# 可自定义阈值 #}
 
-{% if diff_days > 365 %}
-<div class="md-typeset">
-    <div class="md-admonition warning outdated-warning">
-        <p class="md-admonition__title">
-            ⚠️ 文档过时提醒
-        </p>
-        <p>
-            本文档最后更新于 <strong>{{ doc_date }}</strong>（{{ diff_days }} 天前），
-            可能包含过时信息，请结合最新文档参考使用。
-        </p>
-    </div>
+{% if days_since_update > stale_after_days %}
+<div class="md-banner">
+    ⚠️ 本文档最后更新于 {{ page.meta.revision_date | date('%Y-%m-%d') }}，
+    已超过 {{ stale_after_days }} 天未更新，内容可能已过时，请注意核实。
 </div>
 {% endif %}
 {% endif %}
+
+{# 继续原始内容 #}
+{{ super() }}
 {% endblock %}
