feat: adapt banner font

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block announce %}
-    <p>🎉 rapidocr v3.5.0更新日志 → <a href="https://rapidai.github.io/RapidOCRDocs/main/changelog/v3.5.0/" target="_blank">link</a></p>
+    <p class="banner">🎉 rapidocr v3.5.0更新日志 → <a href="https://rapidai.github.io/RapidOCRDocs/main/changelog/v3.5.0/" target="_blank">link</a></p>
 {% endblock %}
 
 {% block outdated %}
